--- a/style_guide_2/index.html
+++ b/style_guide_2/index.html
@@ -1426,7 +1426,7 @@
                 </h4>
                 <img
                   class="modal-window-close-icon closeModalTrigger"
-                  src="./style_guide_2/img/close.svg"
+                  src="../../../style_guide_2/img/close.svg"
                   alt="close-cross" />
               </div>
               <div class="modal-window-content">
@@ -1532,7 +1532,7 @@
               </h4>
               <img
                 class="modal-window-close-icon closeModalTrigger"
-                src="./style_guide_2/img/close.svg"
+                src="../../../style_guide_2/img/close.svg"
                 alt="close-cross" />
             </div>
             <div class="modal-window-content">
@@ -1565,7 +1565,7 @@
               </h4>
               <img
                 class="modal-window-close-icon closeModalTrigger"
-                src="./style_guide_2/img/close.svg"
+                src="../../../style_guide_2/img/close.svg"
                 alt="close-cross" />
             </div>
             <div class="modal-window-content">
