--- a/runner.html
+++ b/runner.html
@@ -12,7 +12,7 @@
       href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css" />
     <link rel="stylesheet" href="./styles/style.css" />
     <title>Runner</title>
-    <script type="text/javascript" src="./particals.js"></script>
+    <script type="text/javascript" src="/particals.js"></script>
   </head>
 
   <body>
@@ -25,7 +25,7 @@
       <div
         w3-include-html="./template/modals/runner-panel/runner-panel.html"
         id="panelContainer"
-        class="grid gap-3"></div>
+        class="stretch-panel-container"></div>
       <!-- Template for clone -->
       <template
         id="runner-panel"
@@ -94,6 +94,16 @@
 
     <!-- panel.js for adding new runner/limitter instances -->
     <script type="module" src="./style_guide_2/script/panel.js"></script>
+
+    <!-- add-field.js for add/remove fields in setup modals -->
+    <script type="module" src="./style_guide_2/script/add-field.js"></script>
+    <script
+      type="module"
+      src="./style_guide_2/script/turn-off-button.js"></script>
+    <script
+      type="module"
+      src="./style_guide_2/script/hide-monetary-value.js"></script>
+    <script type="module" src="./style_guide_2/script/gallery.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
 
