--- a/runner.html
+++ b/runner.html
@@ -12,7 +12,7 @@
       href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css" />
     <link rel="stylesheet" href="./styles/style.css" />
     <title>Runner</title>
-    <script type="text/javascript" src="/particals.js"></script>
+    <script type="text/javascript" src="./particals.js"></script>
   </head>
 
   <body>
