fix: edit layout

--- a/index.html
+++ b/index.html
@@ -22,7 +22,14 @@
 
       <!--limmiter panel-->
       <div
-        w3-include-html="./template/modals/stretchPanel/stretch-panel.html"></div>
+        w3-include-html="./template/modals/stretchPanel/stretch-panel.html"
+        id="panelContainer"
+        class="stretch-panel-container"></div>
+      <template
+        id="limitter-panel"
+        w3-include-html="./template/modals/stretchPanel/stretch-panel.html">
+      </template>
+
       <div w3-include-html="./template/modals/terminal/terminal.html"></div>
       <div
         w3-include-html="./template/modals/risk-manager/risk-manager.html"></div>
