--- a/runner.html
+++ b/runner.html
@@ -119,5 +119,21 @@
     <script>
       Fancybox.bind("[data-fancybox='gallery']", {});
     </script>
+
+    <!-- Date Picker -->
+    <script
+      type="text/javascript"
+      src="https://cdn.jsdelivr.net/jquery/latest/jquery.min.js"></script>
+    <script
+      type="text/javascript"
+      src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
+    <script
+      type="text/javascript"
+      src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
+    <script type="module" src="./style_guide_2/script/datepicker.js"></script>
   </body>
 </html>
