feat: edit yeti modal demo account tab

--- a/runner.html
+++ b/runner.html
@@ -85,6 +85,11 @@
       type="module"
       src="./style_guide_2/script/kpi-checker.js"></script>
 
+    <script
+      defer
+      type="module"
+      src="./style_guide_2/script/reset-settings-logic.js"></script>
+
     <!-- script js inline .info-line-wrapper -->
 
     <script type="module" src="./style_guide_2/script/tag-master.js"></script>
