add pagination to runner and limitter pages

--- a/runner.html
+++ b/runner.html
@@ -72,6 +72,7 @@
       type="module"
       src="./style_guide_2/script/init-modules.js"
     ></script>
+    <script type="module" src="./style_guide_2/script/pagination.js"></script>
     <script type="module" src="./style_guide_2/script/status.js"></script>
     <script defer type="module" src="./style_guide_2/script/modals.js"></script>
     <script
