--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <link rel="icon" type="image/x-icon" href="./favicon.ico" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
-      rel="stylesheet" />
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css" />
+      href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css"
+    />
     <link rel="stylesheet" href="./styles/style.css" />
     <title>Limitter</title>
     <script type="text/javascript" src="./particals.js"></script>
@@ -24,78 +26,97 @@
       <div
         w3-include-html="./template/modals/stretchPanel/stretch-panel.html"
         id="panelContainer"
-        class="stretch-panel-container"></div>
+        class="stretch-panel-container"
+      ></div>
       <template
         id="limitter-panel"
-        w3-include-html="./template/modals/stretchPanel/stretch-panel.html">
+        w3-include-html="./template/modals/stretchPanel/stretch-panel.html"
+      >
       </template>
 
       <div w3-include-html="./template/modals/terminal/terminal.html"></div>
       <div
-        w3-include-html="./template/modals/risk-manager/risk-manager.html"></div>
+        w3-include-html="./template/modals/risk-manager/risk-manager.html"
+      ></div>
       <div
-        w3-include-html="./template/modals/symbol-setup/symbol-setup.html"></div>
+        w3-include-html="./template/modals/symbol-setup/symbol-setup.html"
+      ></div>
       <div
         w3-include-html="./template/modals/schedule/schedule.html"
-        class="overlay"></div>
+        class="overlay"
+      ></div>
       <div w3-include-html="./template/modals/attention/attention.html"></div>
       <div
         w3-include-html="./template/modals/demo/demo.html"
-        class="overlay"></div>
+        class="overlay"
+      ></div>
       <div w3-include-html="./template/modals/reset/reset.html"></div>
       <div w3-include-html="./template/modals/tag-master/tag-master.html"></div>
       <div
-        w3-include-html="./template/modals/preset-master/preset-master.html"></div>
+        w3-include-html="./template/modals/preset-master/preset-master.html"
+      ></div>
       <div w3-include-html="./template/modals/logo/logo.html"></div>
       <div
-        w3-include-html="./template/modals/key-performance/key-performance.html"></div>
+        w3-include-html="./template/modals/key-performance/key-performance.html"
+      ></div>
       <div w3-include-html="./template/modals/settings/settings.html"></div>
     </div>
     <!-- modal windows end -->
     <script>
       includeHTML();
     </script>
+    <script type="module" src="./style_guide_2/script/pagination.js"></script>
+
     <script
       defer
       type="module"
-      src="./style_guide_2/script/init-modules.js"></script>
+      src="./style_guide_2/script/init-modules.js"
+    ></script>
     <script type="module" src="./style_guide_2/script/status.js"></script>
     <script defer type="module" src="./style_guide_2/script/modals.js"></script>
     <script
       defer
       type="module"
-      src="./style_guide_2/script/buttons.js"></script>
+      src="./style_guide_2/script/buttons.js"
+    ></script>
     <script type="module" src="./style_guide_2/script/profitRange.js"></script>
     <script
       type="module"
-      src="./style_guide_2/script/logo-gradient.js"></script>
+      src="./style_guide_2/script/logo-gradient.js"
+    ></script>
     <!-- script js init functions for Stretch Panel -->
     <script
       type="module"
-      src="./style_guide_2/script/initScriptsForStretchPanel.js"></script>
+      src="./style_guide_2/script/initScriptsForStretchPanel.js"
+    ></script>
     <script
       type="module"
-      src="./style_guide_2/script/logo-gradient.js"></script>
+      src="./style_guide_2/script/logo-gradient.js"
+    ></script>
     <script type="module" src="./style_guide_2/script/selector.js"></script>
     <script defer type="module" src="./style_guide_2/script/timer.js"></script>
     <script
       defer
       type="module"
-      src="./style_guide_2/script/kpi-checker.js"></script>
+      src="./style_guide_2/script/kpi-checker.js"
+    ></script>
 
     <!-- script js inline .info-line-wrapper -->
 
     <script type="module" src="./style_guide_2/script/tag-master.js"></script>
     <script
       type="module"
-      src="./style_guide_2/script/preset-master.js"></script>
+      src="./style_guide_2/script/preset-master.js"
+    ></script>
 
     <script
       type="module"
-      src="./style_guide_2/script/turn-off-button.js"></script>
+      src="./style_guide_2/script/turn-off-button.js"
+    ></script>
     <script
       type="module"
-      src="./style_guide_2/script/hide-monetary-value.js"></script>
+      src="./style_guide_2/script/hide-monetary-value.js"
+    ></script>
     <script type="module" src="./style_guide_2/script/gallery.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
@@ -103,11 +124,13 @@
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
       integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-      crossorigin="anonymous"></script>
+      crossorigin="anonymous"
+    ></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
       integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
-      crossorigin="anonymous"></script>
+      crossorigin="anonymous"
+    ></script>
 
     <script>
       Fancybox.bind("[data-fancybox='gallery']", {});
