fix: limitter issues

--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
         w3-include-html="./template/modals/stretchPanel/stretch-panel.html">
       </template>
 
+      <div class="pagination-container">
+        <div class="style-guide m-3">
+          <div id="pagination" class="pagination"></div>
+        </div>
+      </div>
+
       <div w3-include-html="./template/modals/terminal/terminal.html"></div>
       <div
         w3-include-html="./template/modals/risk-manager/risk-manager.html"></div>
