--- a/runner.html
+++ b/runner.html
@@ -32,6 +32,12 @@
         w3-include-html="./template/modals/runner-panel/runner-panel.html">
       </template>
 
+      <div class="pagination-container">
+        <div class="style-guide m-3">
+          <div id="pagination" class="pagination"></div>
+        </div>
+      </div>
+
       <div w3-include-html="./template/modals/terminal/terminal.html"></div>
       <div
         w3-include-html="./template/modals/risk-manager/risk-manager.html"></div>
