feat: add statistic bar

--- a/statistic.html
+++ b/statistic.html
@@ -13,6 +13,8 @@
   <body>
     <div class="page-wrapper">
       <div w3-include-html="./template/statistic/header.html"></div>
+
+      <div w3-include-html="./template/statistic/bar.html"></div>
     </div>
 
     <script>
