--- a/statistic.html
+++ b/statistic.html
@@ -15,6 +15,8 @@
       <div w3-include-html="./template/statistic/header.html"></div>
 
       <div w3-include-html="./template/statistic/bar.html"></div>
+
+      <div w3-include-html="./template/statistic/chart.html"></div>
     </div>
 
     <script>
