feat: add range blocks

--- a/statistic.html
+++ b/statistic.html
@@ -17,6 +17,8 @@
       <div w3-include-html="./template/statistic/bar.html"></div>
 
       <div w3-include-html="./template/statistic/chart.html"></div>
+
+      <div w3-include-html="./template/statistic/range-blocks.html"></div>
     </div>
 
     <script>
@@ -36,6 +38,10 @@
       defer
       type="module"
       src="./style_guide_2/script/buttons.js"></script>
+    <script
+      defer
+      type="module"
+      src="./style_guide_2/script/range-slider.js"></script>
 
     <!-- Date Picker -->
     <script
