feat: add progress blocks

--- a/statistic.html
+++ b/statistic.html
@@ -42,6 +42,10 @@
       defer
       type="module"
       src="./style_guide_2/script/range-slider.js"></script>
+    <script
+      defer
+      type="module"
+      src="./style_guide_2/script/progress.js"></script>
 
     <!-- Date Picker -->
     <script
