--- a/statistic.html
+++ b/statistic.html
@@ -6,6 +6,9 @@
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css" />
     <link rel="stylesheet" href="./styles/style.css" />
     <script type="text/javascript" src="./particals.js"></script>
     <title>Statistic</title>
@@ -19,6 +22,9 @@
       <div w3-include-html="./template/statistic/chart.html"></div>
 
       <div w3-include-html="./template/statistic/range-blocks.html"></div>
+
+      <div
+        w3-include-html="./template/modals/statistic/statistic-modal.html"></div>
     </div>
 
     <script>
@@ -46,6 +52,23 @@
       defer
       type="module"
       src="./style_guide_2/script/progress.js"></script>
+    <script defer type="module" src="./style_guide_2/script/modals.js"></script>
+    <script type="module" src="./style_guide_2/script/profitRange.js"></script>
+
+    <!-- Gallery -->
+    <script type="module" src="./style_guide_2/script/gallery.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+      crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+      integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+      crossorigin="anonymous"></script>
+    <script>
+      Fancybox.bind("[data-fancybox='gallery']", {});
+    </script>
 
     <!-- Date Picker -->
     <script
