fix: issues after review

--- a/statistic.html
+++ b/statistic.html
@@ -25,6 +25,25 @@
 
       <div
         w3-include-html="./template/modals/statistic/statistic-modal.html"></div>
+
+      <div class="pagination-container">
+        <div class="style-guide m-3">
+          <div id="pagination" class="pagination"></div>
+        </div>
+      </div>
+
+      <div w3-include-html="./template/modals/logo/logo.html"></div>
+      <div
+        w3-include-html="./template/modals/key-performance/key-performance.html"></div>
+      <div w3-include-html="./template/modals/terminal/terminal.html"></div>
+      <div
+        w3-include-html="./template/modals/risk-manager/risk-manager.html"></div>
+      <div
+        w3-include-html="./template/modals/symbol-setup/symbol-setup.html"></div>
+
+      <div w3-include-html="./template/modals/attention/attention.html"></div>
+      <div w3-include-html="./template/modals/settings/settings.html"></div>
+      <div w3-include-html="./template/modals/reset/reset.html"></div>
     </div>
 
     <script>
@@ -40,10 +59,34 @@
       defer
       type="module"
       src="./style_guide_2/script/init-modules.js"></script>
+    <script type="module" src="./style_guide_2/script/pagination.js"></script>
+    <script type="module" src="./style_guide_2/script/status.js"></script>
+    <script defer type="module" src="./style_guide_2/script/modals.js"></script>
     <script
       defer
       type="module"
       src="./style_guide_2/script/buttons.js"></script>
+    <script type="module" src="./style_guide_2/script/profitRange.js"></script>
+    <script
+      type="module"
+      src="./style_guide_2/script/logo-gradient.js"></script>
+    <script type="module" src="./style_guide_2/script/selector.js"></script>
+    <script
+      defer
+      type="module"
+      src="./style_guide_2/script/kpi-checker.js"></script>
+    <script
+      defer
+      type="module"
+      src="./style_guide_2/script/reset-settings-logic.js"></script>
+    <script type="module" src="./style_guide_2/script/add-field.js"></script>
+    <script
+      type="module"
+      src="./style_guide_2/script/turn-off-button.js"></script>
+    <script
+      type="module"
+      src="./style_guide_2/script/hide-monetary-value.js"></script>
+
     <script
       defer
       type="module"
@@ -52,8 +95,6 @@
       defer
       type="module"
       src="./style_guide_2/script/progress.js"></script>
-    <script defer type="module" src="./style_guide_2/script/modals.js"></script>
-    <script type="module" src="./style_guide_2/script/profitRange.js"></script>
 
     <!-- Gallery -->
     <script type="module" src="./style_guide_2/script/gallery.js"></script>
