fix: changes after review

--- a/statistic.html
+++ b/statistic.html
@@ -86,6 +86,9 @@
     <script
       type="module"
       src="./style_guide_2/script/hide-monetary-value.js"></script>
+    <script
+      type="module"
+      src="./style_guide_2/script/hide-prediction-value.js"></script>
 
     <script
       defer
