--- a/statistic.html
+++ b/statistic.html
@@ -2,6 +2,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="statistic" />
     <link rel="icon" type="image/x-icon" href="./favicon.ico" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
@@ -60,6 +61,7 @@
       type="module"
       src="./style_guide_2/script/init-modules.js"></script>
     <script type="module" src="./style_guide_2/script/pagination.js"></script>
+    <script src="./style_guide_2/script/navigation-current-page.js"></script>
     <script type="module" src="./style_guide_2/script/status.js"></script>
     <script defer type="module" src="./style_guide_2/script/modals.js"></script>
     <script
